[gd_scene load_steps=36 format=2]

[ext_resource path="res://src/Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/normal_map_walls.png" type="Texture" id=2]
[ext_resource path="res://src/Assets/walls.png" type="Texture" id=3]
[ext_resource path="res://src/Assets/GeneralTileSet.tres" type="TileSet" id=4]
[ext_resource path="res://src/Scenes/Vignette.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Assets/top.png" type="Texture" id=6]
[ext_resource path="res://src/Assets/vines.png" type="Texture" id=7]
[ext_resource path="res://src/Assets/bars.png" type="Texture" id=8]
[ext_resource path="res://src/Assets/light.png" type="Texture" id=9]
[ext_resource path="res://src/Assets/PixelRPG.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://src/Assets/sewer_pipe.png" type="Texture" id=11]
[ext_resource path="res://src/Assets/normal_map_sewer_pipe.png" type="Texture" id=12]
[ext_resource path="res://src/Assets/cobweb.png" type="Texture" id=13]
[ext_resource path="res://src/Assets/normal_map_cobweb.png" type="Texture" id=14]
[ext_resource path="res://src/Assets/normal_map_splatter2.png" type="Texture" id=17]
[ext_resource path="res://src/Assets/splatter2.png" type="Texture" id=18]
[ext_resource path="res://src/Assets/normal_map_turd.png" type="Texture" id=19]
[ext_resource path="res://src/Assets/turd.png" type="Texture" id=20]
[ext_resource path="res://src/Scenes/Ant.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/Assets/help.png" type="Texture" id=22]
[ext_resource path="res://src/Assets/normal_map_help.png" type="Texture" id=23]
[ext_resource path="res://src/Scenes/Spider.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/Assets/toilet_roll.png" type="Texture" id=26]
[ext_resource path="res://src/Assets/normal_map_toilet_roll.png" type="Texture" id=27]
[ext_resource path="res://src/Scripts/Camera.gd" type="Script" id=30]

[sub_resource type="Environment" id=1]
background_mode = 4
dof_blur_near_enabled = true
dof_blur_near_distance = 1.0
glow_enabled = true
glow_strength = 0.5
glow_bloom = 0.65
glow_blend_mode = 0
glow_hdr_threshold = 0.65
glow_bicubic_upscale = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 233, 10 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.0198676, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 31 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 67, 69 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.013245, 1 )
colors = PoolColorArray( 0.183594, 0.183594, 0.183594, 1, 1, 1, 1, 0 )

[sub_resource type="OpenSimplexNoise" id=9]

[sub_resource type="Animation" id=10]
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_ball"
} ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="NullTiles" type="TileMap" parent="."]
modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
tile_set = ExtResource( 4 )
collision_layer = 2
collision_mask = 37
format = 1
tile_data = PoolIntArray( -196616, 1, 0, -196615, 1, 0, -196614, 1, 0, -196613, 1, 0, -196612, 1, 0, -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -131080, 1, 0, -131079, 1, 0, -131078, 1, 0, -131077, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -65543, 1, 0, -65542, 1, 0, -65541, 1, 0, -65540, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -8, 1, 0, -7, 1, 0, -6, 1, 0, -5, 1, 0, -4, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 196615, 1, 0, 196616, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Restraints" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Restraints"]
position = Vector2( -160, -74 )
z_index = 3
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Restraints/StaticBody2D"]
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Restraints"]
position = Vector2( 96, -74 )
z_index = 3
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Restraints/StaticBody2D2"]
shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Restraints"]
position = Vector2( -36, 10 )
z_index = 3
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Restraints/StaticBody2D3"]
shape = SubResource( 3 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Restraints"]
position = Vector2( -202, -45 )
rotation = 1.5708
z_index = 3
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Restraints/StaticBody2D4"]
shape = SubResource( 3 )

[node name="StaticBody2D5" type="StaticBody2D" parent="Restraints"]
position = Vector2( 138, -40 )
rotation = 1.5708
z_index = 3
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Restraints/StaticBody2D5"]
shape = SubResource( 3 )

[node name="StaticBody2D6" type="StaticBody2D" parent="Restraints"]
position = Vector2( 138, -40 )
rotation = 1.5708
z_index = 3
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Restraints/StaticBody2D6"]
shape = SubResource( 3 )

[node name="SpriteWalls" type="Node2D" parent="."]
modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
position = Vector2( 19, 16 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Wall6" type="Sprite" parent="SpriteWalls"]
position = Vector2( -179, -111 )
texture = ExtResource( 3 )
normal_map = ExtResource( 2 )
hframes = 10
frame = 8

[node name="Wall7" type="Sprite" parent="SpriteWalls"]
position = Vector2( 77, -110 )
texture = ExtResource( 3 )
normal_map = ExtResource( 2 )
hframes = 10
frame = 8

[node name="Wall1" type="Sprite" parent="SpriteWalls"]
position = Vector2( -179, -48 )
texture = ExtResource( 3 )
normal_map = ExtResource( 2 )
hframes = 10
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="Wall2" type="Sprite" parent="SpriteWalls"]
position = Vector2( -115, -48 )
texture = ExtResource( 3 )
normal_map = ExtResource( 2 )
hframes = 10
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Wall3" type="Sprite" parent="SpriteWalls"]
position = Vector2( -51, -48 )
texture = ExtResource( 3 )
normal_map = ExtResource( 2 )
hframes = 10
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Wall4" type="Sprite" parent="SpriteWalls"]
position = Vector2( 13, -48 )
texture = ExtResource( 3 )
normal_map = ExtResource( 2 )
hframes = 10
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Wall5" type="Sprite" parent="SpriteWalls"]
position = Vector2( 77, -48 )
scale = Vector2( -1, 1 )
texture = ExtResource( 3 )
normal_map = ExtResource( 2 )
hframes = 10
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="PurpleLighting" type="Light2D" parent="."]
position = Vector2( -228, -220 )
texture = ExtResource( 9 )
color = Color( 1, 0, 0.890196, 1 )
energy = 3.87
range_height = 198.2
__meta__ = {
"_edit_lock_": true
}

[node name="YellowLighting" type="Light2D" parent="."]
position = Vector2( 130, -240 )
texture = ExtResource( 9 )
color = Color( 1, 0.960784, 0, 1 )
energy = 3.87
range_height = 198.2
__meta__ = {
"_edit_lock_": true
}

[node name="PurpleParticles" type="CPUParticles2D" parent="."]
position = Vector2( -159, -102 )
amount = 25
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
spread = 90.0
gravity = Vector2( 0, 120 )
angular_velocity_random = 1.0
linear_accel = 66.67
angle = 45.0
angle_random = 1.0
scale_amount = 1.5
scale_amount_random = 1.0
color_ramp = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="YellowParticles" type="CPUParticles2D" parent="."]
position = Vector2( 95, -97 )
amount = 25
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
spread = 90.0
gravity = Vector2( 0, 120 )
angular_velocity_random = 1.0
linear_accel = 66.67
angle = 45.0
angle_random = 1.0
scale_amount = 1.5
scale_amount_random = 1.0
color_ramp = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreLabels" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="PurpleTeamShadow" type="Label" parent="ScoreLabels"]
modulate = Color( 0, 0, 0, 0.32549 )
margin_left = -104.0
margin_top = -34.0
margin_right = -94.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PurpleTeam" type="Label" parent="ScoreLabels"]
modulate = Color( 1, 1, 1, 0.254902 )
margin_left = -104.0
margin_top = -35.0
margin_right = -94.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="YellowTeamShadow" type="Label" parent="ScoreLabels"]
modulate = Color( 0, 0, 0, 0.32549 )
margin_left = 39.0
margin_top = -34.0
margin_right = 49.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="YellowTeam" type="Label" parent="ScoreLabels"]
modulate = Color( 1, 1, 1, 0.254902 )
margin_left = 39.0
margin_top = -35.0
margin_right = 49.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WallDecor" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="SewerPipes" type="Node2D" parent="WallDecor"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Shadow" type="Sprite" parent="WallDecor/SewerPipes"]
modulate = Color( 0, 0, 0, 0.619608 )
position = Vector2( 98.5, -33.5 )
scale = Vector2( 0.796875, 0.796875 )
texture = ExtResource( 11 )
normal_map = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="WallDecor/SewerPipes"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 98.5, -30.5 )
scale = Vector2( 0.796875, 0.796875 )
texture = ExtResource( 11 )
normal_map = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cobwebs" type="Node2D" parent="WallDecor"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="WallDecor/Cobwebs"]
position = Vector2( -185, -58 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )
normal_map = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="WallDecor/Cobwebs"]
position = Vector2( -185, -5 )
scale = Vector2( 0.5, -0.5 )
texture = ExtResource( 13 )
normal_map = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Splatters" type="Node2D" parent="WallDecor"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="WallDecor/Splatters"]
position = Vector2( -28, -39 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 18 )
normal_map = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Turds" type="Node2D" parent="WallDecor"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite6" type="Sprite" parent="WallDecor/Turds"]
modulate = Color( 0, 0, 0, 0.333333 )
position = Vector2( -66, -5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
normal_map = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="WallDecor/Turds"]
position = Vector2( -64, -5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
normal_map = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite7" type="Sprite" parent="WallDecor/Turds"]
modulate = Color( 0, 0, 0, 0.333333 )
position = Vector2( 39, -5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
normal_map = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="WallDecor/Turds"]
position = Vector2( 41, -5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
normal_map = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite10" type="Sprite" parent="WallDecor/Turds"]
modulate = Color( 0, 0, 0, 0.333333 )
position = Vector2( -174, -5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
normal_map = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite5" type="Sprite" parent="WallDecor/Turds"]
position = Vector2( -172, -5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
normal_map = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="ToiletRoll" type="Node2D" parent="WallDecor"]

[node name="Sprite5" type="Sprite" parent="WallDecor/ToiletRoll"]
modulate = Color( 0.545098, 0.545098, 0.545098, 1 )
self_modulate = Color( 0, 0, 0, 0.333333 )
position = Vector2( -122, -4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 26 )
normal_map = ExtResource( 27 )

[node name="Sprite" type="Sprite" parent="WallDecor/ToiletRoll"]
modulate = Color( 0.545098, 0.545098, 0.545098, 1 )
position = Vector2( -120, -4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 26 )
normal_map = ExtResource( 27 )

[node name="Sprite6" type="Sprite" parent="WallDecor/ToiletRoll"]
modulate = Color( 0, 0, 0, 0.333333 )
position = Vector2( 100, -4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 26 )
normal_map = ExtResource( 27 )

[node name="Sprite2" type="Sprite" parent="WallDecor/ToiletRoll"]
modulate = Color( 0.545098, 0.545098, 0.545098, 1 )
position = Vector2( 103, -4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 26 )
normal_map = ExtResource( 27 )

[node name="Ants" type="Node2D" parent="WallDecor"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Ant" parent="WallDecor/Ants" instance=ExtResource( 21 )]
position = Vector2( -161, -4 )
scale = Vector2( 0.75, 0.75 )

[node name="Ant2" parent="WallDecor/Ants" instance=ExtResource( 21 )]
position = Vector2( 43, -4 )
scale = Vector2( 0.75, 0.75 )

[node name="Spiders" type="Node2D" parent="WallDecor"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Spider2" parent="WallDecor/Spiders" instance=ExtResource( 25 )]
modulate = Color( 0, 0, 0, 0.341176 )
position = Vector2( -146, -49 )

[node name="Spider" parent="WallDecor/Spiders" instance=ExtResource( 25 )]
position = Vector2( -146, -51 )

[node name="Spider3" parent="WallDecor/Spiders" instance=ExtResource( 25 )]
modulate = Color( 0, 0, 0, 0.341176 )
position = Vector2( 36, -49 )

[node name="Spider4" parent="WallDecor/Spiders" instance=ExtResource( 25 )]
position = Vector2( 36, -51 )

[node name="Writing" type="Node2D" parent="WallDecor"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="WallDecor/Writing"]
modulate = Color( 1, 1, 1, 0.721569 )
position = Vector2( -33, -29 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 22 )
normal_map = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[node name="YellowScoreParticles" type="CPUParticles2D" parent="."]
position = Vector2( 95, -97 )
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
spread = 90.0
gravity = Vector2( 0, 120 )
angular_velocity_random = 1.0
linear_accel = 66.67
angle = 45.0
angle_random = 1.0
scale_amount = 12.0
scale_amount_random = 1.0
color_ramp = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="PurpleScoreParticles" type="CPUParticles2D" parent="."]
position = Vector2( -160, -97 )
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 32, 1 )
spread = 90.0
gravity = Vector2( 0, 120 )
angular_velocity_random = 1.0
linear_accel = 66.67
angle = 45.0
angle_random = 1.0
scale_amount = 12.0
scale_amount_random = 1.0
color_ramp = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="DarkenLayer" type="CanvasModulate" parent="."]
color = Color( 0.341176, 0.341176, 0.341176, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawns" type="Node2D" parent="."]
position = Vector2( -10, -5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="PurpleSpawn" type="Position2D" parent="Spawns" groups=[
"PlayerSpawn",
]]
position = Vector2( -128, -24 )
__meta__ = {
"_edit_lock_": true
}

[node name="PurpleSpawn2" type="Position2D" parent="Spawns" groups=[
"PlayerSpawn",
]]
position = Vector2( -92, -24 )
__meta__ = {
"_edit_lock_": true
}

[node name="YellowSpawn" type="Position2D" parent="Spawns" groups=[
"PlayerSpawn",
]]
position = Vector2( 37, -26 )
__meta__ = {
"_edit_lock_": true
}

[node name="YellowSpawn2" type="Position2D" parent="Spawns" groups=[
"PlayerSpawn",
]]
position = Vector2( 78, -26 )
__meta__ = {
"_edit_lock_": true
}

[node name="YellowTeamScoreDetector" type="Area2D" parent="."]
visible = false
position = Vector2( 95, -107 )
collision_layer = 16
collision_mask = 4

[node name="Collider" type="CollisionShape2D" parent="YellowTeamScoreDetector"]
shape = SubResource( 6 )

[node name="PurpleTeamScoreDetector" type="Area2D" parent="."]
visible = false
position = Vector2( -160, -109 )
collision_layer = 2147483664
collision_mask = 4

[node name="Collider" type="CollisionShape2D" parent="PurpleTeamScoreDetector"]
shape = SubResource( 6 )

[node name="PurpleTeamSelector" type="Area2D" parent="."]
position = Vector2( -118, -30 )
collision_layer = 2

[node name="Collider" type="CollisionShape2D" parent="PurpleTeamSelector"]
shape = SubResource( 7 )

[node name="YellowTeamSelector" type="Area2D" parent="."]
position = Vector2( 59, -22 )
collision_layer = 2

[node name="Collider" type="CollisionShape2D" parent="YellowTeamSelector"]
shape = SubResource( 7 )

[node name="RoofParticles" type="CPUParticles2D" parent="."]
position = Vector2( -30, -62 )
rotation = -3.14159
amount = 18
emission_shape = 2
emission_rect_extents = Vector2( 125, 1 )
direction = Vector2( 45, -45 )
gravity = Vector2( 0, -45 )
initial_velocity = 45.0
initial_velocity_random = 1.0
color_ramp = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ForegroundDecor" type="Node2D" parent="."]
z_index = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Vines" type="Sprite" parent="ForegroundDecor"]
modulate = Color( 1, 1, 1, 0.160784 )
position = Vector2( -117, -7 )
scale = Vector2( 18.6667, 18.6667 )
z_index = 5
z_as_relative = false
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="Node2D" parent="ForegroundDecor"]
modulate = Color( 0.658824, 0.658824, 0.658824, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ForegroundDecor/Top"]
position = Vector2( -226, -69 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite7" type="Sprite" parent="ForegroundDecor/Top"]
position = Vector2( -354, -72 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="ForegroundDecor/Top"]
position = Vector2( -98, -68 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="ForegroundDecor/Top"]
position = Vector2( 27, -68 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite4" type="Sprite" parent="ForegroundDecor/Top"]
position = Vector2( 155, -65 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite5" type="Sprite" parent="ForegroundDecor/Top"]
position = Vector2( 283, -65 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite6" type="Sprite" parent="ForegroundDecor/Top"]
position = Vector2( 409, -60 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="ForegroundDecor/Top"]
margin_left = -1439.0
margin_top = -347.0
margin_right = 1387.0
margin_bottom = -119.0
color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bars" type="Node2D" parent="ForegroundDecor"]
modulate = Color( 0.427451, 0.427451, 0.427451, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ForegroundDecor/Bars"]
position = Vector2( -327, 97 )
scale = Vector2( 15, 15 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="ForegroundDecor/Bars"]
position = Vector2( 33, 97 )
scale = Vector2( 15, 15 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="ForegroundDecor/Bars"]
position = Vector2( 393, 97 )
scale = Vector2( 15, 15 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" type="Camera2D" parent="."]
rotating = true
current = true
script = ExtResource( 30 )
__meta__ = {
"_edit_lock_": true
}
noise = SubResource( 9 )

[node name="Vignette" parent="." instance=ExtResource( 5 )]

[node name="GlobalLighting" type="Light2D" parent="."]
position = Vector2( -18, -31 )
scale = Vector2( 3.94721, 1 )
texture = ExtResource( 9 )
energy = 1.2
mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnBall" type="AnimationPlayer" parent="."]
autoplay = "spawn_ball"
anims/spawn_ball = SubResource( 10 )

[node name="BallSpawn" type="Position2D" parent="."]
position = Vector2( -31, -17 )
__meta__ = {
"_edit_lock_": true,
"_gizmo_extents_": 1.0
}
[connection signal="body_entered" from="YellowTeamScoreDetector" to="." method="_on_YellowTeamScoreDetector_body_entered"]
[connection signal="body_entered" from="PurpleTeamScoreDetector" to="." method="_on_PurpleTeamScoreDetector_body_entered"]
[connection signal="body_entered" from="PurpleTeamSelector" to="." method="_on_PurpleTeamSelector_body_entered"]
[connection signal="body_entered" from="YellowTeamSelector" to="." method="_on_YellowTeamSelector_body_entered"]
